--- a/default-configurations/Storage/storage.conf
+++ b/default-configurations/Storage/storage.conf
@@ -30,6 +30,6 @@
 	"PrefetchCount": 10,
 
 	"HTTP": ":8016",
-	"SSLCert": "/path/to/crt",
-	"SSLKey": "/path/to/key"
+	"SSLCert": "/home/vagrant/HolmesProcessing/go/src/github.com/HolmesProcessing/Holmes-Gateway/config/cert.pem",
+	"SSLKey": "/home/vagrant/HolmesProcessing/go/src/github.com/HolmesProcessing/Holmes-Gateway/config/cert-key.pem"
 }
