--- a/default-configurations/Totem/totem.conf
+++ b/default-configurations/Totem/totem.conf
@@ -7,7 +7,7 @@ totem {
     download_directory = "/tmp/"
     thread_multiplier = 4
     request_timeout = 1000
-    validate_ssl_cert = true
+    validate_ssl_cert = false
   }
 
   tasking_settings {
